--- a/filehtml.html
+++ b/filehtml.html
@@ -42,43 +42,28 @@
     <a href="https://www.linkedin.com/in/neema-balolebwami-nelly-8a2226107/" class="hero-btn">LinkedIn</a>
   </div>
   <div class="hero-scroll-images">
-    <!-- New images for the slideshow -->
-    <img src="https://lh3.googleusercontent.com/d/1V5TioA8tBH2CoiXBLSnlhm7Hn181gI9X" alt="Neema Slide 1">
-    <img src="https://lh3.googleusercontent.com/d/1Rkkejw0F8v7cHCS_NPBrssrvHcQud31t" alt="Neema Slide 4">
-    <img src="https://lh3.googleusercontent.com/d/1gDc9hgDaJOAbBz4dlFIQsCDV2aKncxe2" alt="Neema Slide 5">
-
-
-
     <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
     <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
+    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
+    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
     <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
       <!-- Duplicate set for seamless scroll -->
-      <!-- New images for the slideshow -->
-    <img src="https://lh3.googleusercontent.com/d/1V5TioA8tBH2CoiXBLSnlhm7Hn181gI9X" alt="Neema Slide 1">
-    <img src="https://lh3.googleusercontent.com/d/1Rkkejw0F8v7cHCS_NPBrssrvHcQud31t" alt="Neema Slide 4">
-    <img src="https://lh3.googleusercontent.com/d/1gDc9hgDaJOAbBz4dlFIQsCDV2aKncxe2" alt="Neema Slide 5">
-
-      
     <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
     <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
+    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
+    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
     <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
           <!-- Duplicate set for seamless scroll -->
-    <img src="https://lh3.googleusercontent.com/d/1V5TioA8tBH2CoiXBLSnlhm7Hn181gI9X" alt="Neema Slide 1">
-    <img src="https://lh3.googleusercontent.com/d/1Rkkejw0F8v7cHCS_NPBrssrvHcQud31t" alt="Neema Slide 4">
-    <img src="https://lh3.googleusercontent.com/d/1gDc9hgDaJOAbBz4dlFIQsCDV2aKncxe2" alt="Neema Slide 5">
-
-          
     <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
     <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
+    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
+    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
     <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
       <!-- Duplicate set for seamless scroll -->
-    <img src="https://lh3.googleusercontent.com/d/1V5TioA8tBH2CoiXBLSnlhm7Hn181gI9X" alt="Neema Slide 1">
-    <img src="https://lh3.googleusercontent.com/d/1Rkkejw0F8v7cHCS_NPBrssrvHcQud31t" alt="Neema Slide 4">
-    <img src="https://lh3.googleusercontent.com/d/1gDc9hgDaJOAbBz4dlFIQsCDV2aKncxe2" alt="Neema Slide 5">
-
-
     <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
     <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
+    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
+    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
     <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
 
 
@@ -142,7 +127,7 @@
       alt="Person 14"
     />
     <img
-      src="https://lh3.googleusercontent.com/d/1SDy8xZpmfK4GQ8oKOJiNyq42Tb2evFqx"
+      src="https://lh3.googleusercontent.com/d/1brIdh1q7h9GlO4hannT1iwoxMtWYzr5X"
       alt="Person 15"
     />
     <img
@@ -162,8 +147,9 @@
       alt="Person 19"
     />
   </div>
-</div>
 <!-- About the CEO Section -->
+<section id="about">
+</section>
 <div class="about-ceo">
   <div class="ceo-photo">
     <img
@@ -175,21 +161,20 @@
     <h2 class="ceo-title">
       <a href="about.html">About the CEO</a>
     <!-- About Section -->
-    <h2>AI Expert | Soft. Engineer<br>Keynote Speaker EMCEE: Master of Ceremony (MC)</h2>
+    <h2>AI Expert | Software Engineer<br>Ethical AI Trainer | Keynote Speaker</h2>
     <p>
      I am a founder of EMEA Venture Builder and NEEMA AI, and a passionate advocate for Artificial Intelligence Ethics, AI that is fair, transparent, and inclusive. My background include software engineering, data science, full-stack web development, and economics.
     </p>
     <p>
       At EMEA Venture Builder, we develop personalized AI-driven software for businesses ranging from task automation, predictive analytics, LLM-powered solutions to custom data intelligence platforms. 
     </p>
-    <p>Through NEEMA AI, I deliver specialized training in AI ethics for organizations and individuals in areas such as algorithmic fairness, data privacy, security, accountability, reliability, and AI governance. I help organizations design and implement responsible AI that aligns with core human values and legal standards.My academic achievements include two Master's degrees: one in Business and Research (MSc) from the University of Barcelona in Spain, and another in Economy and Management (MSc) from the University of Annecy in France. I’ve further complemented my education with diplomas in Data Science and Full-Stack Web Development.
+    <p>Through NEEMA AI, I deliver specialized training in AI ethics for organizations and individuals in areas such as algorithmic fairness, data privacy, security, accountability, reliability, and AI governance. I help organizations design and implement responsible AI that aligns with core human values and legal standards. My academic achievements include two Master's degrees: one in Business and Research (MSc) from the University of Barcelona in Spain, and another in Economy and Management (MSc) from the University of Annecy in France. I’ve further complemented my education with diplomas in Data Science and Full-Stack Web Development.
     </p>
     </p>As a keynote speaker and Master of Ceremonies, I engage global audiences with thought-provoking talks on ethical AI. My talks emphasize the urgent need for responsibility in innovation, social impact of machine learning, and the importance of building AI that serves everyone equally.
     </p>
     </p>Academically, I hold two Master’s degrees: an MSc in Business and Research from University of Barcelona (Spain), and an MSc in Economy and Management from University of Annecy (France), along with diplomas in Data Science and Full-Stack Web Development.
 In 2022, I was nominated as an Ambassador of Barcelona by the City Council, and in 2024, I received the honorary Tech Leader of the Year award from Women Who Change the World.
     </p>
-    </p>I am driven by a single goal: to shape a future where AI empowers and does not exclude people.
     </div>
   </div>
 </section>
@@ -259,34 +244,34 @@ In 2022, I was nominated as an Ambassador of Barcelona by the City Council, and 
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1tVy8Y6riFce1akb_bZFeR-WZGaD8CKn7" alt="Neema speaking" />
       <p>
-        I’ve delivered keynotes at universities and tech conferences on the importance of ethical, inclusive AI. My talks focus on fairness, transparency, and accountability in AI systems to empower responsible innovation.
+        I’ve delivered keynotes at universities and tech conferences on the importance of ethical, inclusive AI. My talks focus on fairness, transparency, and accountability to empower responsible innovation.
       </p>
     </div>
 
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1peFjorvM-Rg7-xmIihLz0EsIIAhLAdcr" alt="King Felipe VI" />
       <p>
-        I’ve had the privilege of collaborating with leading voices in AI and ethics, sharing insights alongside global experts and thought leaders. A highlight was being photographed with King Felipe VI of Spain, reflecting the growing recognition of ethical AI on the world stage.
+        I’ve had the privilege of collaborating with leading voices in AI and ethics, sharing insights alongside global experts and thought leaders. A highlight was being photographed with King Felipe VI of Spain.
       </p>
     </div>
 
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1HRKrFo1CQy-AMSl6sqEQlX9IQVpc-Z9c" alt="EU Summit" />
       <p>
-        I’ve spoken on AI ethics and governance at an EU summit, contributing to discussions on policy frameworks that prioritize transparency, accountability, and human rights. My involvement focused on shaping ethical guidelines for AI development across member states.
+        I’ve spoken on AI ethics and governance at an EU summit, contributing to discussions on frameworks that prioritize transparency, accountability, and human rights. My involvement focused on shaping ethical AI.
       </p>
   </div>
 </section>
 
 <!--Links to Blog section -->
 <!-- Blog Section -->
-<section id="blog">
+<!-- <section id="blog">
   <h2>Blog</h2>
   <p>Welcome to my blog! This serves as a journal to keep up with my current course updates, speaking arrangements, opportunities, and learnings.</p>
 
-  <div class="blog-container">
+  <div class="blog-container">-->
     <!-- Blog Post 1 -->
-    <div class="blog-post">
+    <!-- <div class="blog-post">
       <h3>Q&A Response</h3>
       <p>Will major corporations adopt ethical AI practices, and is it imperative to strengthen regulations for compliance? 
 
@@ -304,10 +289,10 @@ In response, I drew parallels to the rise of sustainability two decades ago when
 
 It was indeed outstanding at DevTalksRomania !</p>
       <img src="https://lh3.googleusercontent.com/d/1bJWR6i_GIDvLlFu_ndh_y0me8xDUifz4" alt="FutureTech Summit">
-    </div>
+    </div>-->
 
     <!-- Blog Post 2 -->
-    <div class="blog-post">
+    <!-- <div class="blog-post">
       <h3>Keynote</h3>
       <p>Who is defeating us with AI ? Is it the machines themselves, or are we: engineers, creators or culprits?
 
@@ -335,10 +320,10 @@ Let us strive to create technology all the while recognizing our shared responsi
 
 I had the honor of delivering this keynote where I emphasized the significance of AI ethics and the necessity of harnessing the full potential of AI at TechBBQ, the largest tech event in the Nordics, that was held in Copenhagen.</p>
       <img src="https://lh3.googleusercontent.com/d/16i117SRejoIWkC4Lir0z-XS0FBZd9zY0" alt="Course Launch">
-    </div>
+    </div>-->
 
     <!-- Blog Post 3 -->
-    <div class="blog-post">
+    <!-- <div class="blog-post">
       <h3>Gen AI Summit</h3>
       <p>✨ Gen AI Summit EU was enriching !
 
@@ -357,7 +342,7 @@ Muchas gracias Julieta por esta experiencia inolvidable! Fue un honor formar par
   </div>
 </section>
   </div>
-</section>
+</section>-->
 
 <!-- Show Section -->
 <!-- <section id="show">
@@ -386,7 +371,8 @@ Muchas gracias Julieta por esta experiencia inolvidable! Fue un honor formar par
         <a href="https://www.instagram.com/neema_ai?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">Instagram</a>
         <a href="https://www.tiktok.com/@neema_ai" target="_blank">TikTok</a>
       </div>
-  <div class="footer-text">
-    Tel: +34663814246 | Av. Diagonal, 452, Gràcia 08006 Barcelona
-  </div>
+  <div class="footer-contact">
+  Tel: +34663814246 | Av. Diagonal, 452, Gràcia 08006 Barcelona
+</div>
+
 </footer>
