--- a/filehtml.html
+++ b/filehtml.html
@@ -16,14 +16,14 @@
 <section class="hero-section">
     <!-- Small Logo in the Top Left Corner -->
     <div class="logo-container">
-        <img src="https://lh3.googleusercontent.com/d/1CvEt6iTrardQYTi2GWFjyR_bdBkZz3dN" alt="Logo">
+        <img src="https://lh3.googleusercontent.com/d/1eeuEzLUdvCmhD0XEkMrs7GpIRXYg5ru7" alt="Logo">
     </div>
  <nav>
   <div class="nav-links">
     <a href="#about">About</a>
     <a href="#services">Services</a>
-    <a href="#background">Background</a>
-    <a href="#blog">Blog</a>
+    <a href="#background-section">Background</a>
+   <!-- <a href="#blog">Blog</a>-->
     <!--<a href="#show">Show</a>-->
     <!--<a href="course.html">Course</a>-->
     <a href="#contacts">Contacts</a>
@@ -36,7 +36,7 @@
   <div class="hero-text">
     <h1>Neema Balolebwami Nelly</h1>
     <p>
-      AI Ethics Expert | Corporate AI Trainer | Keynote Speaker<br>
+      AI Expert | Ethics AI Trainer | Keynote Speaker<br>
       Responsible AI Engineer | Bias Mitigation Specialist
     </p>
     <a href="https://www.linkedin.com/in/neema-balolebwami-nelly-8a2226107/" class="hero-btn">LinkedIn</a>
@@ -44,30 +44,12 @@
   <div class="hero-scroll-images">
     <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
     <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
-    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
+    <img src="https://lh3.googleusercontent.com/d/1YOQIGPU5mNXoHT7EbDlekQl1ajGGAClB" alt="Slide 3">
     <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
     <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
-      <!-- Duplicate set for seamless scroll -->
-    <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
-    <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
-    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
-    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
-    <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
-          <!-- Duplicate set for seamless scroll -->
-    <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
-    <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
-    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
-    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
-    <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
-      <!-- Duplicate set for seamless scroll -->
-    <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
-    <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
-    <img src="https://lh3.googleusercontent.com/d/1DxySrYLdWaalAIsdQc2ojHF5gTM7slgi" alt="Slide 3">
-    <img src="https://lh3.googleusercontent.com/d/1ENs10V3ZsZkbedtImTNJ6HQdwTHTPlbj" alt="Slide 4">
-    <img src="https://lh3.googleusercontent.com/d/1aGA7ccc6HrAHox0YJwX-LEYvkHqzeX0Q" alt="Slide 5">
-
-
-  </div>
+    <img src="https://lh3.googleusercontent.com/d/1M-lPhzAHFchO3T-8p2cy-dkQKX_MykLJ" alt="Slide 6">
+    <img src="https://lh3.googleusercontent.com/d/11XQcVoOiTwHiubu2zSRY4c-rjiWKaia4" alt="Slide 7">
+   </div>
 </section>
 
 <!-- People I Have Worked With Section -->
@@ -147,6 +129,11 @@
       alt="Person 19"
     />
   </div>
+  <div class="carousel-spacer"></div>
+</div>
+
+
+
 <!-- About the CEO Section -->
 <section id="about">
 </section>
@@ -159,7 +146,7 @@
   </div>
   <div class="ceo-text">
     <h2 class="ceo-title">
-      <a href="about.html">About the CEO</a>
+      <a href="about.html"></a>
     <!-- About Section -->
     <h2>AI Expert | Software Engineer<br>Ethical AI Trainer | Keynote Speaker</h2>
     <p>
@@ -237,7 +224,7 @@ In 2022, I was nominated as an Ambassador of Barcelona by the City Council, and 
     </div>
   </section>  
   <!-- 2. MY BACKGROUND SECTION -->
-  <section class="background-section">
+<section id="background-section">
   <h2 class="section-title">My Background</h2>
   <div class="card-container">
 
