Fixed main page scroll

--- a/filehtml.html
+++ b/filehtml.html
@@ -42,6 +42,9 @@
     <a href="https://www.linkedin.com/in/neema-balolebwami-nelly-8a2226107/" class="hero-btn">LinkedIn</a>
   </div>
   <div class="hero-scroll-images">
+    <img src="https://lh3.googleusercontent.com/d/1V5TioA8tBH2CoiXBLSnlhm7Hn181gI9X" alt="Neema Slide 1">
+    <img src="https://lh3.googleusercontent.com/d/1Rkkejw0F8v7cHCS_NPBrssrvHcQud31t" alt="Neema Slide 2">
+    <img src="https://lh3.googleusercontent.com/d/1gDc9hgDaJOAbBz4dlFIQsCDV2aKncxe2" alt="Neema Slide 3">
     <img src="https://lh3.googleusercontent.com/d/1Q51wbiIk4MA0xJpvkaGBET2hLqr_OjvX" alt="Slide 1">
     <img src="https://lh3.googleusercontent.com/d/1MtREDtY4_XoFdL6HZmtwZNa02yJz6ju3" alt="Slide 2">
     <img src="https://lh3.googleusercontent.com/d/1YOQIGPU5mNXoHT7EbDlekQl1ajGGAClB" alt="Slide 3">
