--- a/course.html
+++ b/course.html
@@ -26,7 +26,7 @@
     <!-- Emeaventure Dropdown in the Top Right Corner -->
     <div class="dropdown-container">
         <div class="menu-container">
-            <img src="https://lh3.googleusercontent.com/d/1AjFoYS5v7kSMwSXFd0EjSwdnuq-rmN2r" alt="Notifications" class="bell-icon">
+            <img src="https://lh3.googlxeusercontent.com/d/1AjFoYS5v7kSMwSXFd0EjSwdnuq-rmN2r" alt="Notifications" class="bell-icon">
             <div class="dropdown">
                 <button class="dropbtn">Emeaventure ▼</button>
                 <div class="dropdown-content">
