--- a/filehtml.html
+++ b/filehtml.html
@@ -36,8 +36,8 @@
   <div class="hero-text">
     <h1>Neema Balolebwami Nelly</h1>
     <p>
-      AI Expert | Ethics AI Trainer | Keynote Speaker<br>
-      Responsible AI Engineer | Bias Mitigation Specialist
+      AI Ethics Expert | Software Engineer | Keynote Speaker<br>
+      AI Trainer | Data Scientist | Entrepreneur | Economista
     </p>
     <a href="https://www.linkedin.com/in/neema-balolebwami-nelly-8a2226107/" class="hero-btn">LinkedIn</a>
   </div>
@@ -143,7 +143,7 @@
 <div class="about-ceo">
   <div class="ceo-photo">
     <img
-      src="https://lh3.googleusercontent.com/d/1HRKrFo1CQy-AMSl6sqEQlX9IQVpc-Z9c"
+      src="About.jpg"
       alt="CEO Photo"
     />
   </div>
@@ -154,11 +154,9 @@
     <h2>AI Expert | Software Engineer<br>Ethical AI Trainer | Keynote Speaker</h2>
     <p>
      I am a founder of EMEA Venture Builder and NEEMA AI, and a passionate advocate for Artificial Intelligence Ethics, AI that is fair, transparent, and inclusive. My background include software engineering, data science, full-stack web development, and economics.
-    </p>
-    <p>
       At EMEA Venture Builder, we develop personalized AI-driven software for businesses ranging from task automation, predictive analytics, LLM-powered solutions to custom data intelligence platforms. 
     </p>
-    <p>Through NEEMA AI, I deliver specialized training in AI ethics for organizations and individuals in areas such as algorithmic fairness, data privacy, security, accountability, reliability, and AI governance. I help organizations design and implement responsible AI that aligns with core human values and legal standards. My academic achievements include two Master's degrees: one in Business and Research (MSc) from the University of Barcelona in Spain, and another in Economy and Management (MSc) from the University of Annecy in France. I’ve further complemented my education with diplomas in Data Science and Full-Stack Web Development.
+    <p>Through NEEMA AI, I deliver specialized training in AI ethics for organizations and individuals in areas such as algorithmic fairness, data privacy, security, accountability, reliability, and AI governance. I help organizations design and implement responsible AI that aligns with core human values and legal standards.
     </p>
     </p>As a keynote speaker and Master of Ceremonies, I engage global audiences with thought-provoking talks on ethical AI. My talks emphasize the urgent need for responsibility in innovation, social impact of machine learning, and the importance of building AI that serves everyone equally.
     </p>
@@ -176,32 +174,32 @@ In 2022, I was nominated as an Ambassador of Barcelona by the City Council, and 
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1CRwvo8OsiOqTcSKYyPNLwL9NsOrGlIor" alt="AI Ethics" class="service-icon" />
       <h3>AI Ethics Training</h3>
-      <p>I develop software solutions to streamline data operations. I design and maintain ETL (Extract, Transform, Load) systems to reliable, accessible data for AI initiatives.</p>
+      <p>I deliver AI ethics training focused on algorithmic fairness, transparency, data security, reliability and accountability to drive responsible development and trustworthy deployment of AI systems.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1IGDGmkstxAFyY1Hr5XfDhQ_7Axf9hCL-" alt="ML Automation" class="service-icon" />
       <h3>ML, Data Automation</h3>
-      <p>I write programming code to optimize data workflows. I build custom ETL (Extract, Transform, Load) pipelines to ensure data quality and accessibility for AI development.</p>
+      <p>I engineer automated data solutions using custom scripting, orchestration frameworks, and scalable ETL architectures to ensure integrity, accessibility, and high-throughput pipelines for machine learning deployment.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1_1HDx7k8FDVB_edZS_Hb68BinI6EkFD8" alt="Explainable AI" class="service-icon" />
-      <h3>Explainable AI Development</h3>
-      <p>I develop AI models using strategies that emphasize high-quality, impartial data and address algorithmic bias through testing and experimentation.</p>
+      <h3>Predictive Analytics</h3>
+      <p>I build predictive analytics systems using statistical modeling, machine learning algorithms and real-time data integration to forecast trends and support intelligent, data-driven business decisions.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1NC02QtaoLVKhBJsL1t_FLTZC2GIx_A64" alt="Responsible AI" class="service-icon" />
-      <h3>Responsible AI Consultancy</h3>
-      <p>I address business needs by applying AI tools that streamline operations, visual recognition systems, and enable predictive analytics—grounded in real-world data.</p>
+      <h3>AI Consultancy</h3>
+      <p>I consult on Responsible AI, applying governance frameworks with ethical AI assessments, transparency principles, and regulatory alignment to support trustworthy design, development, and deployment of machine learning systems across sectors.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1RAt21Zq7MO6sW9QGKj8T9BbhkIwQeubC" alt="App Development" class="service-icon" />
-      <h3>Intelligent App Development</h3>
-      <p>I create tailored AI-driven mobile applications for iOS and Android, leveraging smart models that align with each client’s unique objectives and needs.</p>
+      <h3>Mobile App Development</h3>
+      <p>I develop AI- powered mobile applications for Android and iOS using React Native, Kotlin and Swift, tailored to diverse user needs and industry requirements with personalized predictive insights and seamless cross platform performance.</p>
     </div>
     <div class="service-box">
       <img src="https://lh3.googleusercontent.com/d/1ThgaGnGz1E9-idoPSDSl87dQevzOjB3y" alt="Keynote" class="service-icon" />
       <h3>Keynote Speaker</h3>
-      <p>I present insightful sessions at international forums, sparking thought-provoking conversations on ethical AI, regulatory challenges, and its global economic impact.</p>
+      <p>I deliver keynote speeches and provide conference training on algorithmic fairness, explainable AI, accountability and the humanization of AI, driving dialogue on ethics, regulation and economic impact at the intersection of responsible systems.</p>
     </div>
   </div>
 </section>
@@ -234,21 +232,21 @@ In 2022, I was nominated as an Ambassador of Barcelona by the City Council, and 
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1tVy8Y6riFce1akb_bZFeR-WZGaD8CKn7" alt="Neema speaking" />
       <p>
-        I’ve delivered keynotes at universities and tech conferences on the importance of ethical, inclusive AI. My talks focus on fairness, transparency, and accountability to empower responsible innovation.
+        I deliver keynote presentations at international congresses and leading universities on the transformative impact of ethical AI. My talks focus on fairness, transparency, data security and accountability to empower responsible innovation and trustworthy digital future.
       </p>
     </div>
 
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1peFjorvM-Rg7-xmIihLz0EsIIAhLAdcr" alt="King Felipe VI" />
       <p>
-        I’ve had the privilege of collaborating with leading voices in AI and ethics, sharing insights alongside global experts and thought leaders. A highlight was being photographed with King Felipe VI of Spain.
+        I engage with institutions, governments, and thought leaders in AI ethics, raising awareness, providing AI ethics training and sharing knowledge. A memorable moment was being photographed with King Felipe VI of Spain, reflecting meaningful recognition.
       </p>
     </div>
 
     <div class="card">
       <img src="https://lh3.googleusercontent.com/d/1HRKrFo1CQy-AMSl6sqEQlX9IQVpc-Z9c" alt="EU Summit" />
       <p>
-        I’ve spoken on AI ethics and governance at an EU summit, contributing to discussions on frameworks that prioritize transparency, accountability, and human rights. My involvement focused on shaping ethical AI.
+        As a leader, I focus on the policy side of AI ethics by advancing strategic frameworks, strengthening AI governance and partnering with institutions to shape inclusive regulations that promote fairness, transparency and accountability across technological landscapes.
       </p>
   </div>
 </section>
@@ -354,12 +352,12 @@ Muchas gracias Julieta por esta experiencia inolvidable! Fue un honor formar par
   </div>
 </section>-->
 <div id="contacts" class="contact-group">
-    <p>Follow us on:</p>
+    <p>Follow on:</p>
     <div style="display: flex; justify-content: center; gap: 15px;">
-        <a href="https://www.linkedin.com/company/neema-artificial-intelligence/" target="_blank">LinkedIn</a>
-        <a href="https://x.com/NeemaBal" target="_blank">X</a>
+        <a href="https://www.linkedin.com/in/neema-balolebwami-nelly-8a2226107/" target="_blank">LinkedIn</a>
+        <!-- <a href="https://x.com/NeemaBal" target="_blank">X</a> -->
         <a href="https://www.instagram.com/neema_ai?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">Instagram</a>
-        <a href="https://www.tiktok.com/@neema_ai" target="_blank">TikTok</a>
+        <!-- <a href="https://www.tiktok.com/@neema_ai" target="_blank">TikTok</a> -->
       </div>
   <div class="footer-contact">
   Tel: +34663814246 | Av. Diagonal, 452, Gràcia 08006 Barcelona
