final formatting adjustments

--- a/filehtml.html
+++ b/filehtml.html
@@ -153,8 +153,8 @@
     <!-- About Section -->
     <h2>AI Expert | Software Engineer<br>Ethical AI Trainer | Keynote Speaker</h2>
     <p>
-     I am a founder of <a href="https://emeaventure.com/">EMEA Venture Builder</a> and NEEMA AI, and a passionate advocate for Artificial Intelligence Ethics, AI that is fair, transparent, and inclusive. My background include software engineering, data science, full-stack web development, and economics.
-      At <a href="https://emeaventure.com/">EMEA Venture Builder</a>, we develop personalized AI-driven software for businesses ranging from task automation, predictive analytics, LLM-powered solutions to custom data intelligence platforms. 
+     I am a founder of <a href="https://emeaventure.com/", target="_blank">EMEA Venture Builder</a> and NEEMA AI, and a passionate advocate for Artificial Intelligence Ethics, AI that is fair, transparent, and inclusive. My background include software engineering, data science, full-stack web development, and economics.
+      At EMEA Venture Builder, we develop personalized AI-driven software for businesses ranging from task automation, predictive analytics, LLM-powered solutions to custom data intelligence platforms. 
     </p>
     <p>Through NEEMA AI, I deliver specialized training in AI ethics for organizations and individuals in areas such as algorithmic fairness, data privacy, security, accountability, reliability, and AI governance. I help organizations design and implement responsible AI that aligns with core human values and legal standards.
     </p>
