neema ai course updates

--- a/course.html
+++ b/course.html
@@ -20,25 +20,7 @@
 <section class="hero-section">
     <!-- Small Logo in the Top Left Corner -->
     <div class="logo-container">
-        <img src="https://lh3.googleusercontent.com/d/1CvEt6iTrardQYTi2GWFjyR_bdBkZz3dN" alt="Logo">
-    </div>
-
-    <!-- Emeaventure Dropdown in the Top Right Corner -->
-    <div class="dropdown-container">
-        <div class="menu-container">
-            <img src="https://lh3.googlxeusercontent.com/d/1AjFoYS5v7kSMwSXFd0EjSwdnuq-rmN2r" alt="Notifications" class="bell-icon">
-            <div class="dropdown">
-                <button class="dropbtn">Emeaventure ▼</button>
-                <div class="dropdown-content">
-Unlock the Future of Technology: An Introduction to Ethical AI and Its Impact on Our World
-                    <a href="#">Profile</a>
-                    <a href="#">Programs</a>
-                    <a href="#">My Account</a>
-                    <hr> <!-- Divider line -->
-                    <a href="#" class="logout">Log Out</a>
-                </div>
-            </div>
-        </div>
+        <img src="https://lh3.googleusercontent.com/d/1eeuEzLUdvCmhD0XEkMrs7GpIRXYg5ru7" alt="Logo">
     </div>
 
     <div class="content-container">
@@ -54,6 +36,7 @@ Unlock the Future of Technology: An Introduction to Ethical AI and Its Impact on
             <p>Empower yourself with the knowledge and skills to navigate the ethical challenges of AI.</p>
             <a href="#form" class="cta-button">Join Our Course</a>
         </div>
+        <div class="fog-overlay"></div>
     </div>
 </section>
 <section class="info-section">
@@ -66,9 +49,13 @@ Unlock the Future of Technology: An Introduction to Ethical AI and Its Impact on
 
     <!-- Space for YouTube Video -->
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_LINK" 
-                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen></iframe>
+        <video controls>
+          <source src="neemaaicourse.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <div class="video-container-caption">
+          After years of helming the ship at some of the country’s most iconic companies, including Walmart, Starbucks, and Walgreens, Rosalind Brewer has forged ahead in her quest to innovate while maintaining deep integrity. Now she’s sharing CEO-level strategies for team leaders of all types. Learn to promote innovation, gain buy-in on projects you believe in, and stand out as the leader you know yourself to be.
+        </div>
     </div>
 </section>
 <section class="ethical-ai-section">
