--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a href="#background-section">Background</a>
    <!-- <a href="#blog">Blog</a>-->
     <!--<a href="#show">Show</a>-->
-    <!--<a href="course.html">Course</a>-->
+    <a href="course.html">Course</a>
     <a href="#contacts">Contacts</a>
   </div>
 </nav>
