youtube video embed & course background section updated

--- a/course.html
+++ b/course.html
@@ -49,10 +49,13 @@
 
     <!-- Space for YouTube Video -->
     <div class="video-container">
-        <video controls>
-          <source src="neemaaicourse.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+        <iframe
+          src="https://www.youtube.com/embed/aKx3yFjec74" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen>
+        </iframe>
         <div class="video-container-caption">
           After years of helming the ship at some of the country’s most iconic companies, including Walmart, Starbucks, and Walgreens, Rosalind Brewer has forged ahead in her quest to innovate while maintaining deep integrity. Now she’s sharing CEO-level strategies for team leaders of all types. Learn to promote innovation, gain buy-in on projects you believe in, and stand out as the leader you know yourself to be.
         </div>
