adding more icons and fixing more formatting

--- a/course.html
+++ b/course.html
@@ -65,32 +65,32 @@
     <h2 class="section-title">Who is this Ethical AI for?</h2>
     <div class="principles-grid">
         <div class="principle">
-            <img src="https://lh3.googleusercontent.com/d/11zd5rHdwscwLoPAYsBfRQPO9ZrpMS7GA" alt="Fairness Icon" class="icon">
+            <img src="./assets/principles/fairness.svg" alt="Fairness Icon" class="icon">
             <h3>Fairness</h3>
             <p>Fairness means ensuring AI systems treat all employees equally, with HR involvement in their design and deployment, and proper training before use.</p>
         </div>
         <div class="principle">
-            <img src="https://lh3.googleusercontent.com/d/11zd5rHdwscwLoPAYsBfRQPO9ZrpMS7GA" alt="Transparency Icon" class="icon">
+            <img src="./assets/principles/transparency.svg" alt="Transparency Icon" class="icon">
             <h3>Transparency</h3>
             <p>Transparency means ensuring people know when and how AI is used, especially in decisions affecting careers, and understand how it influences those decisions.</p>
         </div>
         <div class="principle">
-            <img src="https://lh3.googleusercontent.com/d/11zd5rHdwscwLoPAYsBfRQPO9ZrpMS7GA" alt="Data Privacy Icon" class="icon">
+            <img src="./assets/principles/secure.svg" alt="Data Privacy Icon" class="icon">
             <h3>Data Privacy & Security</h3>
             <p>Privacy means AI systems must protect employee data, ensuring individuals feel secure in sharing information only when their privacy is clearly safeguarded and access is limited to trained personnel.</p>
         </div>
         <div class="principle">
-            <img src="https://lh3.googleusercontent.com/d/11zd5rHdwscwLoPAYsBfRQPO9ZrpMS7GA" alt="Responsibility Icon" class="icon">
+            <img src="./assets/principles/responsible.svg" alt="Responsibility Icon" class="icon">
             <h3>Responsibility</h3>
             <p>Responsibility means ensuring those who design and deploy AI are responsible for its outcomes, with clear ownership, organization-wide training, and ongoing updates as AI use evolves.</p>
         </div>
         <div class="principle">
-            <img src="https://lh3.googleusercontent.com/d/11zd5rHdwscwLoPAYsBfRQPO9ZrpMS7GA" alt="Reliability Icon" class="icon">
+            <img src="./assets/principles/reliable.svg" alt="Reliability Icon" class="icon">
             <h3>Reliability</h3>
             <p>Reliability means AI systems must consistently perform safely and as intended, with clear parameters, real-world testing, and human oversight to identify and correct any blind spots or unintended behaviors.</p>
         </div>
         <div class="principle">
-            <img src="https://lh3.googleusercontent.com/d/11zd5rHdwscwLoPAYsBfRQPO9ZrpMS7GA" alt="Humanization Icon" class="icon">
+            <img src="./assets/principles/human.svg" alt="Humanization Icon" class="icon">
             <h3>Humanization</h3>
             <p>Humanization in AI ethics emphasizes designing systems that respect human values, emotions, and dignity. It ensures AI supports—not replaces—human judgment, promoting empathy, fairness, and accountability in all interactions.</p>
         </div>
